# lyl_first

./: README.md
GEC6818/: CMakeLists.txt  Makefile  lv_conf.h  main.c
GEC6818/include/: page_manager.h  serial.h  ui.h
GEC6818/lvgl/: lvgl.h
GEC6818/lvgl/src/drivers/evdev/: lv_evdev.c
GEC6818/lvgl/src/libs/fsdrv/: lv_fs_stdio.c
GEC6818/page/: Control_page.c  Display_page.c  Music_page.c  m_but.c  main_page.c  my_t01.c  page_manager.c  serial.c
GEC6818/ui/: ui.c
esp32/: sketch_nov16a.ino
stm32/: .mxproject  Smart_Home.ioc
stm32/Core/Inc/: FreeRTOSConfig.h  air.h  dht11.h  freertos_task.h  main.h  stm32f1xx_it.h  tim.h  usart.h
stm32/Core/Src/: adc.c  air.c  dht11.c  freertos_task.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
stm32/MDK-ARM/: Smart_Home.uvguix.lyl  Smart_Home.uvoptx  Smart_Home.uvprojx  startup_stm32f103xb.lst
stm32/MDK-ARM/Smart_Home/: Smart_Home.axf  Smart_Home.build_log.htm  Smart_Home.hex  Smart_Home.htm  Smart_Home.lnp  Smart_Home.map  Smart_Home_Smart_Home.dep  adc.crf  adc.d  air.crf  air.d  croutine.crf  croutine.d  dht11.crf  dht11.d  dma.crf  dma.d  event_groups.crf  event_groups.d  freertos_task.crf  freertos_task.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  queue.crf  queue.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  (+46 more)
zigbee/CC2530DB/: 1.txt  Backup of SampleApp.ewp  SampleApp.dep  SampleApp.ewd  SampleApp.ewp  SampleApp.ewt
zigbee/Source/: DHT11.C  SampleApp.c  SampleApp.h  adc.c  adc.h  dht11.h
(+299 files in other folders)
